# substrate-parachain-template

./: README.md  para-2000-genesis-state  para-2000-wasm  plain-parachain-chainspec.json  raw-parachain-chainspec.json  run_parachain.txt
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/src/: lib.rs
